Bugfix: rendering TeX on matching's answers panel

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -418,7 +418,7 @@
 							if (model.QuizState == QuizState.Total)
 							{
 								<div class="quiz-block-matching__fixed-item correct col-xs-3 col-sm-offset-1">
-									@fixedItem.MovableItem
+									@fixedItem.MovableItem.RenderTex()
 								</div>
 							}
 						}
