View changes in course on uploading
1. Remove unneccesary course versions

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -990,3 +990,7 @@ table.analytics__user-answers {
 	margin-top: 5px;
 	display: block;
 }
+
+.courses-versions .courses-versions__version .courses-versions__publish form {
+	display: inline-block;
+}
